Rename projects to archive; Fix sctionScroll inline styles setup on mobile;

--- a/assets/css/pages/home.scss
+++ b/assets/css/pages/home.scss
@@ -448,7 +448,7 @@
     top: 0px;
     left: 0px;
     width: 100vw;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     overflow-x: hidden;
     overflow-y: auto;
 }
